--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -57,8 +57,7 @@
       p {
         color: $color-2;
         font-size: $font-size-15;
-        margin: 0;
-        margin-top: -0.5rem;
+        margin: -0.5rem 0;
         line-height: $line-height-150;
         text-align: center;
 
@@ -69,6 +68,10 @@
     }
   }
   .social-pages {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: -webkit-fill-available;
     .icons-with-link {
       margin: $share-icon-spacing;
       margin-bottom: 5px !important;
@@ -111,6 +114,7 @@
     padding-top: 0.75rem;
     li {
       padding: 0 5px 0 0 !important;
+      margin-bottom: 1rem;
     }
   }
 }
