remove unused css

--- a/etc/designs/zg/bp-newco/desktop/css/core/all.1.css
+++ b/etc/designs/zg/bp-newco/desktop/css/core/all.1.css
@@ -1,8 +1,8 @@
 @import url("../components/map.css");
 @import url("../components/navigation.css");
-@import url("../../../../cf/desktop/css/components/newsfeed.css");
-@import url("../../../../cf/desktop/css/components/newsfeedFilterBy.css");
-@import url("../../../../cf/desktop/css/components/podcastplayer.css");
+/* @import url("../../../../cf/desktop/css/components/newsfeed.css"); */
+/* @import url("../../../../cf/desktop/css/components/newsfeedFilterBy.css"); */
+/* @import url("../../../../cf/desktop/css/components/podcastplayer.css"); */
 @import url("../components/powerreviews.css");
 @import url("../components/productlist.css");
 @import url("../components/questionanswers.css");
@@ -18,14 +18,14 @@
 @import url("../components/smartLink.css");
 @import url("../components/table.css");
 @import url("../components/tabs.css");
-@import url("../../../../basic/desktop/css/components/tagList.css");
+/* @import url("../../../../basic/desktop/css/components/tagList.css"); */
 @import url("../components/tagbasedfilter.css");
 @import url("../components/tagbasedfilterresult.css");
 @import url("../../../../basic/desktop/css/components/title.css");
 @import url("../components/twitter.css");
 @import url("../components/user.box.css");
 @import url("../components/video.css");
-@import url("../../../../basic/desktop/css/components/videoGallery.css");
+/* @import url("../../../../basic/desktop/css/components/videoGallery.css"); */
 @import url("../components/virtualMeetingList.css");
 @import url("../components/virtualMeetingRegistration.css");
-@import url("../components/webinar.css");
+/* @import url("../components/webinar.css"); */
