--- a/etc/designs/zg/bp-newco/desktop/css/core/all.2.css
+++ b/etc/designs/zg/bp-newco/desktop/css/core/all.2.css
@@ -1,5 +1,5 @@
-@import url("../../../../cf/desktop/css/components/webinarTeaser.css");
-@import url("../../../../basic/desktop/css/components/listing.css");
+/* @import url("../../../../cf/desktop/css/components/webinarTeaser.css"); */
+/* @import url("../../../../basic/desktop/css/components/listing.css"); */
 @import url("../components/navigation-mobile-optimized.css");
 @import url("../components/searchblox.search.pagination.css");
 @import url("../../../../cf/desktop/css/components/navigationGroups.css");
