--- a/etc/designs/zg/cf/desktop/css/core/all.1.css
+++ b/etc/designs/zg/cf/desktop/css/core/all.1.css
@@ -1,6 +1,6 @@
-@import url("../components/newsfeed.css");
-@import url("../components/newsfeedFilterBy.css");
-@import url("../components/podcastplayer.css");
+/* @import url("../components/newsfeed.css"); */
+/* @import url("../components/newsfeedFilterBy.css"); */
+/* @import url("../components/podcastplayer.css"); */
 @import url("../components/powerreviews.css");
 @import url("../components/productlist.css");
 @import url("../components/questionanswers.css");
@@ -16,16 +16,16 @@
 @import url("../../../../basic/desktop/css/components/smartLink.css");
 @import url("../../../../basic/desktop/css/components/table.css");
 @import url("../../../../basic/desktop/css/components/tabs.css");
-@import url("../../../../basic/desktop/css/components/tagList.css");
+/* @import url("../../../../basic/desktop/css/components/tagList.css"); */
 @import url("../components/tagbasedfilter.css");
 @import url("../components/tagbasedfilterresult.css");
 @import url("../../../../basic/desktop/css/components/title.css");
 @import url("../../../../basic/desktop/css/components/twitter.css");
 @import url("../components/user.box.css");
 @import url("../../../../basic/desktop/css/components/video.css");
-@import url("../../../../basic/desktop/css/components/videoGallery.css");
+/* @import url("../../../../basic/desktop/css/components/videoGallery.css"); */
 @import url("../components/virtualMeetingList.css");
 @import url("../components/virtualMeetingRegistration.css");
-@import url("../components/webinar.css");
-@import url("../components/webinarTeaser.css");
-@import url("../../../../basic/desktop/css/components/listing.css");
+/* @import url("../components/webinar.css"); */
+/* @import url("../components/webinarTeaser.css"); */
+/* @import url("../../../../basic/desktop/css/components/listing.css"); */
