--- a/etc/designs/zg/circle-blueprint/desktop/css/core/all.2.css
+++ b/etc/designs/zg/circle-blueprint/desktop/css/core/all.2.css
@@ -1,4 +1,4 @@
-@import url("../../../../cf/desktop/css/components/webinarTeaser.css");
+/* @import url("../../../../cf/desktop/css/components/webinarTeaser.css"); */
 @import url("../../../../basic/desktop/css/components/listing.css");
 @import url("../components/navigation-mobile-optimized.css");
 @import url("../components/searchblox.search.pagination.css");
