--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -58,7 +58,7 @@
       p {
         color: $color-2;
         font-size: $font-size-15;
-        margin: -0.5rem 0 0.25rem;
+        margin: -0.5rem 0 1.5rem;
         line-height: $line-height-150;
         text-align: center;
 
@@ -112,7 +112,10 @@
   .footer-list {
     @extend .flex-row;
     @extend .justify-center;
-    padding-top: 0.75rem;
+    padding-top: 1.5rem;
+    @include sm {
+      padding-top: 0.5rem;
+    }
     li {
       padding: 0 5px 0 0 !important;
       margin-bottom: 1rem;
