--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -17,7 +17,7 @@
     span {
       display: block;
       width: fit-content;
-      color: #ffffff !important;
+      color: $color-white !important;
     }
   }
   &.small-cards {
