--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -15,7 +15,7 @@
   }
 
   .carousel-slide {
-    background: #fff;
+    background: $color-white;
     box-shadow: 0px 12px 20px -4px rgba(0, 0, 0, 0.1);
     margin-bottom: 2.5rem;
     ul.tag-links {
