--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -257,7 +257,7 @@
 }
 
 .green-line {
-  background: #30ea03;
+  background: $color-primary;
   min-width: 54px;
   height: 1px;
   position: relative;
@@ -275,7 +275,7 @@
     position: absolute;
     bottom: -18px;
     left: 0;
-    background-color: #9e9e9e;
+    background-color: $color-3;
     width: 52px;
     height: 8px;
   }
@@ -283,13 +283,13 @@
 
 .green-underline {
   &::before {
-    background-color: #30ea03;
+    background-color: $color-primary;
   }
 }
 
 .grey-underline {
   &::before {
-    background-color: #9e9e9e;
+    background-color: $color-3;
   }
 }
 
