--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -364,7 +364,7 @@ header {
       z-index: 9;
       .searchBox-label {
         display: none !important;
-        background: #fff;
+        background: $color-white;
         box-shadow: 0px 16px 40px -8px #0000001a;
         padding: 0 !important;
         height: auto;
@@ -480,7 +480,7 @@ header {
           top: -3px;
           height: 24px;
           background-color: $color-primary;
-          color: #000;
+          color: $color-2;
           width: 76px;
           z-index: -1;
           display: none;
