--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -108,9 +108,15 @@
   }
 
   .col-primary-theme {
-    color: var(--color-primary);
+    color: #000;
     padding: 0 0rem 0 0.15rem;
     font-weight: 700;
+    text-decoration: underline 2px solid $color-primary;
+    &:focus{
+      background: transparent !important;
+      border: 2px solid;
+      outline: none;
+    }
   }
 
   .group-form {
@@ -162,10 +168,6 @@
 
 .pos-absolute {
   position: absolute;
-}
-
-#privacy {
-  text-decoration: underline 2px solid $color-primary;
 }
 
 /* contact form end */
