--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -125,7 +125,11 @@ body {
     padding-left: 1rem !important;
   }
 }
-
+.m-p-l-1-5 {
+  @media screen and (max-width: 767px) {
+    padding-left: 1.5rem !important;
+  }
+}
 .bg-color-aqua {
   background-color: $color-secondary-aqua;
 }
