--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -586,3 +586,8 @@ a:hover {
 .position-relative {
   position: relative;
 }
+
+.btn-large{
+  padding: 15px 20px !important;
+  width: 100% !important;
+}
