--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -7,10 +7,13 @@
     width: 100%;
     height: 3rem;
     border: 2px solid $color-grey-3;
-    padding: 0rem 1rem;
+    padding: 0.75rem 1rem;
     margin-bottom: 0.75rem;
     background-color: $color-grey-3;
     color: $color-1;
+    &:disabled{
+      background-color: $color-3;
+    }
   }
   .error {
     background-color: #fee8e7;
@@ -66,9 +69,12 @@
 
   .privacy-checkbox {
     display: flex;
-    gap: 0.75rem;
+    gap: 0.5rem;
     color: $color-2;
     font-size: 1.125rem;
+    @include sm{
+      gap: 0.75rem;
+    }
 
     input[type='checkbox'] {
       width: 20px;
@@ -103,22 +109,25 @@
   .privacy-desc-haleon {
     font-size: 1.125rem;
     font-family: $font-normal;
-    padding: 1rem 2rem 0;
+    padding: 1rem 0rem 0;
     color: $color-2;
+    @include sm{
+      padding: 1rem 2rem 0;
+    }
   }
 
   .col-primary-theme {
     color: #000;
     padding: 0 0rem 0 0.15rem;
     font-weight: 700;
-    a {
-      text-decoration: underline 2px solid $color-primary;
-      &:focus {
-        background: transparent !important;
-        border: 2px solid;
-        outline: none;
-      }
+   a{
+    text-decoration: underline 2px solid $color-primary;
+    &:focus {
+      background: transparent !important;
+      border: 2px solid;
+      outline: none;
     }
+   }
   }
 
   .group-form {
