--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -45,7 +45,7 @@
   margin: 0 auto;
   padding: 2rem;
   background: $color-white;
-  box-shadow: 0px 16px 40px -8px #0000001a;
+  box-shadow: $box-shadow;
   max-width: 100%;
   @include sm {
     max-width: 80%;
