--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -486,7 +486,7 @@
     position: absolute;
     left: 0;
     top: -4rem;
-    background: #eaeaea;
+    background: $color-grey-3;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -558,7 +558,7 @@
 }
 
 .half-carousel .brand-tile {
-  background: #ffffff !important;
+  background: $color-white !important;
 }
 
 .half-carousel {
@@ -657,8 +657,8 @@
 }
 
 .brand-carousel-content-wrapper {
-  background: #fff;
-  box-shadow: 0px 12px 20px -4px #0000001a;
+  background: $color-white;
+  box-shadow: $box-shadow;
   z-index: 84;
 
   > div > div {
@@ -778,7 +778,7 @@
   li {
     width: 4px;
     height: 20px;
-    background-color: #484848;
+    background-color: $color-1;
     border-radius: 0;
     border: none !important;
     margin-left: 1rem !important;
@@ -793,7 +793,7 @@
     &.active {
       width: 8px;
       height: 32px;
-      background-color: #000;
+      background-color: $color-2;
 
       a {
         border: none !important;
@@ -818,7 +818,11 @@
 }
 
 .half-carousel .carousel-cq .lSSlideOuter .lSSlideWrapper .lSAction a {
-  margin-top: -140px;
+  margin-top: -165px;
+
+  @media screen and (min-width: 540px) {
+    margin-top: -140px;
+  }
 
   @include sm {
     margin-top: -80px;
@@ -1118,9 +1122,9 @@
   .theme-1.class-filter[data-type='buttons']
   .filter-list-js
   .filter-item-js:hover {
-  background-color: #47ffe5 !important;
+  background-color: $color-secondary-aqua !important;
   color: $color-2 !important;
-  border-color: #47ffe5 !important;
+  border-color: $color-secondary-aqua !important;
 }
 
 /* Quaterly result filter css end */
