--- a/src/scss/brand/theme/_colors.scss
+++ b/src/scss/brand/theme/_colors.scss
@@ -78,6 +78,7 @@ $gray-700: rgb(73, 80, 87);
 $gray-800: rgb(52, 58, 64);
 $gray-900: rgb(84, 79, 64);
 
+$box-shadow: 0px 12px 20px -4px #0000001a;
 $black: $color-black;
 $white: $color-white;
 $grays: ();
