--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -587,7 +587,8 @@ a:hover {
   position: relative;
 }
 
-.btn-large{
+.btn-large {
   padding: 15px 20px !important;
-  width: 100% !important;
+  width: calc(100% - 40px) !important;
+  margin: 0;
 }
