--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -589,5 +589,6 @@ a:hover {
 
 .btn-large {
   padding: 15px 20px !important;
-  width: 100% !important;
+  width: calc(100% - 40px) !important;
+  margin: 0;
 }
