--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -129,3 +129,15 @@
     overflow: hidden;
   }
 }
+.carousel-border-center {
+  position: relative;
+  &::before {
+    content: '';
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: $color-3;
+    top: 50%;
+    left: 0;
+  }
+}
