--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -133,7 +133,7 @@
   position: relative;
   &::before {
     content: '';
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 2px;
     background-color: $color-3;
