--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -66,6 +66,7 @@
               flex-basis: 50%;
               width: 50%;
               max-width: 50%;
+              object-fit: cover;
             }
           }
         }
