--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1365,7 +1365,7 @@ ol.alpha-bullets {
     }
 
     p {
-      padding-left: 1rem;
+      text-indent: 0;
     }
   }
 }
@@ -1378,11 +1378,13 @@ ol.alpha-bullets > li:nth-child(2)::before {
   content: 'b.' !important;
 }
 
-ol.alpha-bullets ul {
-  margin-left: 0.5rem;
-
-  li:before {
-    top: 6px;
+ul.hidden-bullets {
+  margin-left: 1rem;
+  li {
+    display: block;
+    &:before {
+      display: none !important;
+    }
   }
 }
 
