--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -16,6 +16,13 @@
     &:disabled {
       background-color: $color-3;
     }
+    &:focus{
+      color: $color-2;
+    }
+  }
+  .outlined{
+    color: $color-2;
+    background-color: $color-white;
   }
   .error {
     background-color: #fee8e7;
