--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -50,7 +50,10 @@ header {
       .megamenu-main-nav {
         .navigation-branch.navigation-level1 {
           max-width: 100% !important;
-          margin-top: 3.5rem !important;
+          margin-top: 1.5rem !important;
+          @include sm {
+            margin-top: 3.5rem !important;
+          }
           @include sd {
             max-width: 100% !important;
             width: 100% !important;
