--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -30,6 +30,7 @@
     &:focus {
       background-color: $color-white;
       border-color: $color-error;
+      color: $color-2;
       outline: $color-error solid 2px;
     }
   }
