--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -23,6 +23,10 @@
   .outlined{
     color: $color-2;
     background-color: $color-white;
+    outline:none;
+    &:focus{
+      outline: solid #484848 2px;
+    }
   }
   .error {
     background-color: #fee8e7;
