--- a/src/scss/brand/components/arrow-links/_index.scss
+++ b/src/scss/brand/components/arrow-links/_index.scss
@@ -9,11 +9,15 @@
     position: absolute;
     right: 0px;
     bottom: 0px;
-    width: 68px;
-    line-height: 68px;
+    width: 48px;
+    line-height: 48px;
     color: $color-2;
     border: 2px solid;
     border-color: $color-primary;
+    @include sm{
+      width: 68px;
+      line-height: 68px;
+    }
   }
 }
 .bottom-external-arrow {
