--- a/src/scss/brand/components/career-search/_index.scss
+++ b/src/scss/brand/components/career-search/_index.scss
@@ -54,8 +54,8 @@
     width: 100%;
     margin: 0.5rem 0;
     max-width: 100%;
-    background: $color-3;
-    outline: 1px solid $color-3;
+    background: $color-grey-3;
+    outline: 1px solid $color-grey-3;
     padding: 1rem;
     border: none;
     height: 48px;
