--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1389,3 +1389,25 @@ ul.hidden-bullets {
   width: 48px;
   text-align: center;
 }
+.sitemap-column{
+  margin-top: 1rem;
+  ul{
+    margin-left: 1rem;
+    li{
+      padding: .25rem 0;
+      ul{
+        margin-left: 1rem;
+      }
+    }
+  
+  }
+}
+‌.sitemap-columns-2 {
+  justify-content: space-between;
+  display: flex;
+  }
+  @media only screen and (max-width: 767px) {
+  .sitemap-columns-2 {
+  flex-direction: column;
+  }
+  }
