--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1393,3 +1393,7 @@ ul.hidden-bullets {
 .tabs-content .tabContent td a.outlined:focus:focus-visible {
   outline: 2px solid !important;
 }
+
+.full-clickable-box:focus-within .bottom-right-arrow:after {
+  border: 2px solid #000;
+}
