--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1026,7 +1026,10 @@ header {
 }
 
 .megamenu-navigation .megamenu-top-bar-right {
-  margin-bottom: 11rem;
+  @media screen and (-webkit-min-device-pixel-ratio: 0) {
+    margin-bottom: 11rem;
+  }
+  margin-bottom: 2rem;
   @media screen and (min-width: 425px) {
     margin-bottom: 0rem;
   }
