--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1391,28 +1391,27 @@ ul.hidden-bullets {
   width: 48px;
   text-align: center;
 }
-.sitemap-column{
+.sitemap-column {
   margin-top: 1rem;
-  ul{
+  ul {
     margin-left: 1rem;
-    li{
-      padding: .25rem 0;
-      ul{
+    li {
+      padding: 0.25rem 0;
+      ul {
         margin-left: 1rem;
       }
     }
-  
   }
 }
 ‌.sitemap-columns-2 {
   justify-content: space-between;
   display: flex;
-  }
-  @media only screen and (max-width: 767px) {
+}
+@media only screen and (max-width: 767px) {
   .sitemap-columns-2 {
-  flex-direction: column;
+    flex-direction: column;
   }
-  }
+}
 
 .tabs-content .tabContent td a.outlined:focus:focus-visible {
   outline: 2px solid !important;
