--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -56,7 +56,7 @@
             border-bottom: 2px solid $color-2;
 
             th {
-              padding: 1rem 0;
+              padding: 1rem;
               border-bottom: 2px solid $color-2;
               line-height: $line-height-160;
               color: $color-2;
@@ -64,7 +64,7 @@
             }
 
             td {
-              padding: 1rem 0;
+              padding: 1rem;
               border-bottom: 2px solid $color-2;
               line-height: $line-height-150;
               color: $color-1;
