--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -968,7 +968,9 @@
       left: 0;
       background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/logo/measure.png);
       width: 2rem;
-      height: 100%;
+      height: 80%;
+      top: 4rem;
+      background-size: cover;
     }
   }
 
