--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1,6 +1,6 @@
 /* Health Profesional Amrendra*/
-.hero-banner {
-  min-height: 80vh;
+.box.hero-banner {
+  min-height: 100vh;
 }
 .your-patient-card-overlap {
   position: relative;
