--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -26,7 +26,10 @@ header {
   .megamenu--newco {
     padding: 0;
     > .component-content {
-      padding: 0 2rem !important;
+      padding: 0 1.8rem !important;
+      @include sm{
+        padding: 0 2rem !important;
+      }
       @include sd {
         padding: 0 2rem 0 0 !important;
       }
