--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -1,6 +1,6 @@
 #footer {
   .footer-column {
-    padding: 2rem 1rem;
+    padding: 2rem 0rem;
   }
   .footer-secondary-nav {
     border-top: 1px solid $color-grey-3;
@@ -42,6 +42,7 @@
     li {
       padding: 0 2px;
       margin-bottom: 1rem;
+      padding: 0 2px !important;
       &:before {
         display: none;
       }
