--- a/src/scss/default/components/footer/_index.scss
+++ b/src/scss/default/components/footer/_index.scss
@@ -177,7 +177,7 @@
   &:after {
     content: '/';
     position: absolute;
-    right: 0;
+    right: -3px;
     top: 0;
     font-size: 1rem;
     color: $color-2;
