--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -156,7 +156,7 @@
   background: #000;
   color: #fff;
 
-  @include sd {
+  @include sm {
     top: 3.75rem;
     left: 1rem;
     max-width: fit-content;
