--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -4,7 +4,7 @@
   }
   .footer-secondary-nav {
     border-top: 1px solid $color-grey-3;
-    padding: 3rem 1rem;
+    padding: 3rem 0 3rem 0.4rem;
     .footer-logo {
       a {
         border: 4px solid $color-white;
