--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -39,9 +39,9 @@
       content: '\e91b';
       font-family: 'icomoon';
       height: 72px;
-      background: #f900ff;
+      background: $color-secondary-pink;
       width: 72px;
-      color: #000;
+      color: $color-2;
       text-align: center;
       /* padding: 2rem; */
       display: flex;
