--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -57,9 +57,9 @@
     }
   }
   .story-content {
-    padding: 2rem;
+    padding: 2rem 1rem;
     @media screen and (max-width: 767px) {
-      margin-top: 15rem;
+      margin-top: 16.5rem;
     }
     @media screen and (max-width: 480px) {
       margin-top: 0rem;
