--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -312,7 +312,7 @@ header {
         left: auto;
         right: -15px;
         top: 12px;
-        content: '\e916';
+        content: '\e91f';
         font-family: 'icomoon';
         font-size: 1rem;
         background-size: auto;
