--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -166,7 +166,7 @@
     list-style: none;
     list-style: none;
     padding: 0;
-    height: 35px;
+    height: auto;
     padding-left: 0rem;
     line-height: 35px;
     margin: 0;
