--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -33,4 +33,7 @@
     height: 350px !important;
     object-position: top;
   }
+  .our-brands-wrapper {
+    margin-bottom: 2rem !important;
+  }
 }
