--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -347,6 +347,15 @@ table {
     padding-bottom: 1.5rem !important;
   }
 }
+
+.p-d-y-3 {
+  padding-top: 3rem;
+  @include sm {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+  }
+}
+
 .p-d-r-1-5 {
   @include sm {
     padding-right: 1.5rem !important;
