--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1435,33 +1435,39 @@ ul.hidden-bullets {
 }
 
 // header search css
-.megamenu{
-  .megamenu-search{
-    .searchBox{
-      .searchBox-label{
-        input{
+.megamenu {
+  .megamenu-search {
+    .searchBox {
+      .searchBox-label {
+        input {
           background-image: none !important;
         }
-        .header-search{
+        .header-search {
           right: 14px !important;
-            position: absolute;
-            top: 18px !important;
-            width: 34px !important;
-            background: $color-primary;
-            height: 34px!important;
-            z-index: 1;
-            &.icon-search-line:before{
-              content: '\e91d' !important;
-              left: 0 !important;
-              right: 0;
-              font-size: 1.25rem !important;
-              top: 5px !important;
-              font-family: 'icomoon' !important;
-            }
+          position: absolute;
+          top: 18px !important;
+          width: 34px !important;
+          background: $color-primary;
+          height: 34px !important;
+          z-index: 1;
+          &.icon-search-line:before {
+            content: '\e91d' !important;
+            left: 0 !important;
+            right: 0;
+            font-size: 1.25rem !important;
+            top: 5px !important;
+            font-family: 'icomoon' !important;
+          }
         }
       }
     }
-   
   }
+}
 
+.carousel .carousel-slides{
+  width: 1000% !important;
+  margin-left: -20rem !important;
+}
+.carousel .carousel-slide{
+  width: 2% !important;
 }
