--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1462,6 +1462,7 @@ ul.hidden-bullets {
               font-size: 1.25rem !important;
               top: 5px !important;
               font-family: 'icomoon' !important;
+              display: block !important;
             }
             &:after{
               content: '';
