--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1,10 +1,10 @@
 /* Health Profesional Amrendra*/
-.box.hero-banner {
-  min-height: 100vh;
-  @media screen and (min-width: 1920px) {
-    min-height: auto;
-  }
-}
+// .box.hero-banner {
+//   min-height: 100vh;
+//   @media screen and (min-width: 1920px) {
+//     min-height: auto;
+//   }
+// }
 .your-patient-card-overlap {
   position: relative;
 
@@ -1435,51 +1435,49 @@ ul.hidden-bullets {
 }
 
 // header search css
-.megamenu{
-  .megamenu-search{
-    .searchBox{
-      .searchBox-label{
-        input{
+.megamenu {
+  .megamenu-search {
+    .searchBox {
+      .searchBox-label {
+        input {
           background-image: none !important;
         }
-        button.header-search{
+        button.header-search {
           right: 0px !important;
-            position: absolute;
-            top: 2px !important;
-            width: 34px !important;
-            background: $color-primary;
-            height: 34px!important;
-            z-index: 1;
+          position: absolute;
+          top: 2px !important;
+          width: 34px !important;
+          background: $color-primary;
+          height: 34px !important;
+          z-index: 1;
+          display: block !important;
+          @include md {
+            right: 7px !important;
+            top: 18px !important;
+          }
+          &.icon-search-line:before {
+            content: '\e91d' !important;
+            left: 0 !important;
+            right: 0;
+            font-size: 1.25rem !important;
+            top: 5px !important;
+            font-family: 'icomoon' !important;
             display: block !important;
-            @include md{
-              right: 7px !important;
-              top: 18px !important;
-            }
-            &.icon-search-line:before{
-              content: '\e91d' !important;
-              left: 0 !important;
-              right: 0;
-              font-size: 1.25rem !important;
-              top: 5px !important;
-              font-family: 'icomoon' !important;
-              display: block !important;
-              z-index: -1 !important;
-            }
-            &:after{
-              content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -2px;
-    height: 34px;
-    background-color: var(--color-primary);
-    width: 32px;
-    z-index: -1;
-            }
+            z-index: -1 !important;
+          }
+          &:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -2px;
+            height: 34px;
+            background-color: var(--color-primary);
+            width: 32px;
+            z-index: -1;
+          }
         }
       }
     }
-   
   }
-
 }
