--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -14,6 +14,14 @@
     &:before {
       display: none !important;
     }
+    &::after {
+      content: '\e91d' !important;
+      font-family: icomoon;
+      background: none !important;
+      z-index: 11;
+      cursor: pointer;
+      font-size: 20px;
+    }
   }
   .searchBox-label {
     display: flex !important;
@@ -26,14 +34,6 @@
       background-color: $color-grey-3;
       border: none !important;
     }
-  }
-  &::after {
-    content: '\e91d';
-    font-family: icomoon;
-    background: none;
-    z-index: 11;
-    cursor: pointer;
-    font-size: 20px;
   }
 }
 
