--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -433,6 +433,7 @@ header {
         background-size: 24px !important;
         top: 12px !important;
         right: 2rem !important;
+        outline: 1px;
         background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/search-line.svg');
         position: fixed;
         @include md {
