--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1448,9 +1448,12 @@ ul.hidden-bullets {
             top: 2px !important;
             width: 34px !important;
             background: $color-primary;
-            height: 34px!important;
+            height: 30px!important;
             z-index: 1;
             display: block !important;
+            @include sm{
+              height: 34px;
+            }
             @include md{
               right: 7px !important;
               top: 18px !important;
